feat: update installer

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crazyrickbot-app",
-  "productName": "crazyrickbot-app",
+  "productName": "CrazyRickBot",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": ".vite/build/main.js",
