--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@electron-forge/publisher-github": "^7.6.1",
     "electron-log": "^5.3.0",
     "electron-squirrel-startup": "^1.0.1",
     "update-electron-app": "^3.1.1"
