--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
   "license": "MIT",
   "dependencies": {
     "@electron-forge/publisher-github": "^7.6.1",
+    "@twurple/api": "^7.2.1",
+    "@twurple/auth": "^7.2.1",
+    "@twurple/eventsub-ws": "^7.2.1",
     "electron-log": "^5.3.0",
     "electron-squirrel-startup": "^1.0.1",
     "update-electron-app": "^3.1.1"
