--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@vue/eslint-config-standard": "^9.0.0",
     "@vue/eslint-config-standard-with-typescript": "^9.0.0",
     "@vue/eslint-config-typescript": "^14.4.0",
+    "autoprefixer": "^10.4.20",
     "electron": "34.2.0",
     "eslint": "^9.20.1",
     "globals": "^15.15.0",
     "jiti": "^2.4.2",
+    "postcss": "^8.5.2",
+    "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0",
