--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@twurple/eventsub-ws": "^7.2.1",
     "electron-log": "^5.3.0",
     "electron-squirrel-startup": "^1.0.1",
+    "electron-store": "^10.0.1",
     "update-electron-app": "^3.1.1"
   }
 }
