--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
   "license": "MIT",
   "dependencies": {
     "@electron-forge/publisher-github": "^7.6.1",
+    "@primevue/themes": "^4.2.5",
     "@twurple/api": "^7.2.1",
     "@twurple/auth": "^7.2.1",
     "@twurple/eventsub-ws": "^7.2.1",
     "electron-log": "^5.3.0",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^8.1.0",
+    "primevue": "^4.2.5",
     "update-electron-app": "^3.1.1"
   }
 }
